--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,16 +1,30 @@
+/* Importação de FONTE */
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+:root {
+    --azul-dnc: #0C70F2;
+    --preto-dnc: #303030;
+    --cinza-hover: #C9C9C9;
+
+    --fonte-padrao: 'Inter';
+}
 
 * {
     margin: 0;
     padding: 0;
 }
 
-/* Menu Inicial */
+body {
+    background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 19.91%, rgba(12, 112, 242, 0) 24.84%), #303030;
+    background-repeat: no-repeat;
+}
+
+/* Menu Inicial de navegação*/
 #principal {
     width: 100%;
     height: 100px;
     border: 1px solid black;
-    background-color: #303030;
+    background-color: var(--preto-dnc);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -21,10 +35,10 @@
     font-weight: 600;
     color: white;
     text-decoration: none;
-    font-family: 'Inter';
+    font-family: var(--fonte-padrao);
 }
 #principal div a:hover {
-    color: #CCCCCC;
+    color: var(--cinza-hover);
 }
 #menu {
     display: flex;
@@ -35,11 +49,11 @@
 }
 #principal button {
     margin-right: 5%;
-    background-color: #0C70F2;
+    background-color: var(--azul-dnc);
     border: 0px;
     height: 40px;
     width: 80px;
-    font-family: inter;
+    font-family: var(--fonte-padrao);
     font-size: 20px;
     font-weight: 600;
     color: white;
@@ -47,3 +61,98 @@
     cursor: pointer;
 }
 
+/* Estruturando os estilos da SECTION (seção principal do site)*/
+
+section {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+header {
+    color: white;
+    font-family: var(--fonte-padrao);
+}
+
+header h1 {
+    text-align: center;
+    font-size: 80px;
+    font-weight: 800;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+header h2 {
+    text-align: center;
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 100px;
+}
+
+header .cor-fundo {
+    background-color: black;
+    font-weight: bold;
+    padding: 5px;
+}
+
+
+/* Dando estilo ao FORMULÁRIO */
+form {
+    color: white;
+    font-family: var(--fonte-padrao);
+    font-size: 30px;
+    font-weight: 600;
+    width: 600px;
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+form input {
+    border-radius: 10px;
+    border: 0px;
+    height: 46px;
+    font-size: 20px;
+    padding: 10px;
+    background-color: rgba(255, 255, 255, 0.9);
+}
+
+form label {
+    margin: 10px 0px 10px 0;
+}
+
+form input::placeholder {
+    color: rgba(57, 57, 57, 0.5);
+}
+
+.checkbox-itens label {
+    font-size: 25px;
+}
+
+checkbox-itens {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+input[type="checkbox"]{
+    transform: scale(1.7);
+}
+
+input[type="submit"] {
+    background-color: rgba(12, 112, 242, 0.9);
+    width: 100%;
+    height: 56px;
+    font-size: 32px;
+    color: white;
+    margin-top: 100px;
+    box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
+    cursor: pointer;
+}
