--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,12 +9,14 @@
     --fonte-padrao: 'Inter';
 }
 
-* {
+/* * {
     margin: 0;
     padding: 0;
-}
+} */
 
 body {
+    margin: 0;
+    padding: 0;
     background: linear-gradient(180deg, rgba(12, 112, 242, 0.5) 19.91%, rgba(12, 112, 242, 0) 24.84%), #303030;
     background-repeat: no-repeat;
 }
@@ -155,4 +157,96 @@ input[type="submit"] {
     margin-top: 100px;
     box-shadow: 0px 6px 4px rgba(12, 112, 242, 0.25);
     cursor: pointer;
+}
+
+
+/* Estilizando o Footer - Rodapé da página */
+
+footer {
+    width: 100%;
+    background-color: var(--azul-dnc);
+}
+
+footer .linha1 {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer ul {
+    list-style: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+footer nav {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 330px;
+}
+
+footer h5 {
+    text-align: center;
+    color: white;
+    font-weight: 800;
+    font-size: 18px;
+    font-family: var(--fonte-padrao);
+
+    background-color: var(--preto-dnc);
+    border-radius: 10px;
+    padding: 10px 10px;
+    margin-bottom: 15px;
+}
+
+footer ul li {
+    text-align: center;
+    color: white;
+    font-weight: 600;
+    font-size: 18px;
+    font-family: var(--fonte-padrao);
+    margin: 20px 0px 20px 0px;
+}
+
+footer ul li a {
+    color: white;
+    text-decoration: none;
+}
+
+footer ul li a:hover {
+    color: var(--cinza-hover);
+}
+
+footer .endereco {
+    font-weight: 600;
+    font-size: 22px;
+    font-family: var(--fonte-padrao);
+    color: white;
+    text-align: center;
+    width: 30%;
+}
+
+footer .linha2 {
+    display: flex;
+    justify-content: center;
+    margin: 0px;
+    height: 35px;
+    padding: 10px;
+}
+
+footer .linha2 a {
+    font-family: var(--fonte-padrao);
+    font-size: 18px;
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    padding: 5px;
+}
+
+footer .linha2 a:first-child {
+    border-right: 3px solid white;
+}
+
+footer .linha2 a:hover {
+    color: var(--cinza-hover);
 }
