--- a/css/estilo.css
+++ b/css/estilo.css
@@ -250,3 +250,52 @@ footer .linha2 a:first-child {
 footer .linha2 a:hover {
     color: var(--cinza-hover);
 }
+
+/* Definindo a responsividade das telas @media querys */
+
+@media only screen and (max-width: 600px) {
+
+    #principal {
+        /* display: flex; */
+        flex-direction: column;
+        height: auto;
+    }
+
+    #menu {
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+    }
+
+    #menu a {
+        height: 50px;
+        display: flex;
+        align-items: center;
+    }
+
+    #principal button {
+        width: 100%;
+        margin: 0px;
+    }
+
+    /* Section */
+    section h1 {
+        font-size: 38px;
+    }
+
+    section h2 {
+        font-size: 28px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    /* Formulário */
+    form {
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-itens label {
+        font-size: 15px;
+    }
+}
