Adicionando media query no footer

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -298,4 +298,14 @@ footer .linha2 a:hover {
     .checkbox-itens label {
         font-size: 15px;
     }
+
+    /* Ajustando o Footer (Rodapé) */
+    footer .linha1 {
+        flex-direction: column;
+    }
+
+    footer .endereco {
+        width: 95%;
+        margin-bottom: 20px;
+    }
 }
