--- a/css/estilo.css
+++ b/css/estilo.css
@@ -309,3 +309,118 @@ footer .linha2 a:hover {
         margin-bottom: 20px;
     }
 }
+
+@media only screen and (max-width: 768px) {
+
+    #principal {
+        /* display: flex; */
+        flex-direction: column;
+        height: auto;
+    }
+
+    #menu {
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+    }
+
+    #menu a {
+        height: 50px;
+        display: flex;
+        align-items: center;
+    }
+
+    #principal button {
+        width: 50%;
+        margin: 0px;
+    }
+
+    /* Section */
+    section h1 {
+        font-size: 38px;
+    }
+
+    section h2 {
+        font-size: 28px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    /* Formulário */
+    form {
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-itens label {
+        font-size: 15px;
+    }
+
+    /* Ajustando o Footer (Rodapé) */
+    footer .linha1 {
+        flex-direction: column;
+    }
+
+    footer .endereco {
+        width: 95%;
+        margin-bottom: 20px;
+    }
+}
+
+@media only screen and (max-width: 425px) {
+
+    #principal {
+        /* display: flex; */
+        flex-direction: column;
+        height: auto;
+    }
+
+    #menu {
+        flex-direction: column;
+        width: 100%;
+        margin: 0px;
+    }
+
+    #menu a {
+        height: 50px;
+        display: flex;
+        align-items: center;
+    }
+
+    #principal button {
+        display: none;
+        /* width: 50%;
+        margin: 0px; */
+    }
+
+    /* Section */
+    section h1 {
+        font-size: 38px;
+    }
+
+    section h2 {
+        font-size: 28px;
+        padding-right: 15px;
+        padding-left: 15px;
+    }
+
+    /* Formulário */
+    form {
+        width: 95%;
+        font-size: 20px;
+    }
+
+    .checkbox-itens label {
+        font-size: 15px;
+    }
+
+    /* Ajustando o Footer (Rodapé) */
+    footer .linha1 {
+        flex-direction: column;
+    }
+
+    footer .endereco {
+        width: 95%;
+        margin-bottom: 20px;
+    }
+}
